Add captcha on front-end, refactor and cleanup

--- a/public/index.html
+++ b/public/index.html
@@ -31,32 +31,7 @@
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
-  <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
 
-<body>
-  <noscript>You need to enable JavaScript to run this app.</noscript>
-  <div id="root"></div>
-  <script src="https://identity-js.netlify.com/v1/netlify-identity-widget.js"></script>
-  <script>
-    // check for netlifyIdentity, redirect to admin if user is logging in
-    if (window.localStorage && window.netlifyIdentity) {
-      netlifyIdentity.on('init', function (user) {
-        if (!user) {
-          netlifyIdentity.on('login', function () {
-            document.location.href = '/admin/'
-          })
-        }
-      })
-    }
-  </script>
-</body>
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-
-    -->
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
     integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
     crossorigin="anonymous"></script>
@@ -66,8 +41,18 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
     integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
     crossorigin="anonymous"></script>
-</body>
-
-</html>
+  <!-- <script src="https://identity-js.netlify.com/v1/netlify-identity-widget.js"></script> -->
+  <script>
+    // check for netlifyIdentity, redirect to admin if user is logging in
+    // if (window.localStorage && window.netlifyIdentity) {
+    //   netlifyIdentity.on('init', function (user) {
+    //     if (!user) {
+    //       netlifyIdentity.on('login', function () {
+    //         document.location.href = '/admin/'
+    //       })
+    //     }
+    //   })
+    // }
+  </script>
 
 </html>
